--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -5,3 +5,21 @@
 html {
     background-size: 200% 200%;
 }
+
+::-webkit-scrollbar {
+    width: 0.25rem;
+    height: 0.25rem;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 0.25rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
