feat: hide scrollbar for messages component

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -6,6 +6,10 @@ html {
     background-size: 200% 200%;
 }
 
+#messages::-webkit-scrollbar {
+    display: none;
+}
+
 ::-webkit-scrollbar {
     width: 0.25rem;
     height: 0.25rem;
