--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -6,7 +6,7 @@ html {
     background-size: 200% 200%;
 }
 
-#messages::-webkit-scrollbar {
+.messages::-webkit-scrollbar {
     display: none;
 }
 
