--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -27,3 +27,11 @@ html {
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
+
+.box-shadow {
+    box-shadow: 0px 8px 6px -6px #000;
+}
+
+.text-shadow {
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
+}
